<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.1"/>

    <ImageView
        android:id="@+id/app_logo_imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_top"
        android:src="@drawable/app_logo_test" />

    <TextView
        android:id="@+id/app_name_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/app_name_text_view"
        android:textColor="#000000"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/app_logo_imageView" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_middle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.4"/>

    <TextView
        android:id="@+id/email_address_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email_address_text_view"
        app:layout_constraintTop_toBottomOf="@+id/guideline_middle"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp" />

    <EditText
        android:id="@+id/email_address_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/email_address_text_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_address_textView"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"/>

    <TextView
        android:id="@+id/password_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password_text_view"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/email_address_editText"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="40dp" />

    <TextView
        android:id="@+id/forgot_password_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password_text_view"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@+id/email_address_editText"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginEnd="40dp"/>

    <EditText
        android:id="@+id/password_editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:text="@string/password_text_view"
        app:layout_constraintTop_toBottomOf="@+id/password_textView"
        app:layout_constraintStart_toEndOf="parent"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7"/>

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_text_view"
        app:layout_constraintTop_toBottomOf="@+id/guideline_bottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/do_not_have_an_account_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/do_not_have_an_account_text_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.37"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_button" />

    <TextView
        android:id="@+id/sign_up_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up_text_view"
        android:layout_marginTop="50dp"
        android:layout_marginStart="10dp"
        app:layout_constraintTop_toBottomOf="@+id/sign_in_button"
        app:layout_constraintStart_toEndOf="@+id/do_not_have_an_account_textView" />

</androidx.constraintlayout.widget.ConstraintLayout>